--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "byfareska/doctrine-flysystem-type",
   "type": "library",
-  "license": "Propertary",
+  "license": "MIT",
   "autoload": {
     "psr-4": {
       "Byfareska\\DoctrineFlysystemType\\": "src/"
@@ -14,7 +14,8 @@
     }
   ],
   "require": {
-    "league/flysystem-bundle": "^3.1",
-    "doctrine/dbal": "^3.0"
+    "league/flysystem-bundle": "^3",
+    "doctrine/dbal": "^3|^4"
   }
 }
+
